--- a/Exercicios/ex026/mq01/estilos/impressora.css
+++ b/Exercicios/ex026/mq01/estilos/impressora.css
@@ -2,3 +2,22 @@
 
 /* Estilo para impressoras */
 
+* {
+    padding: 10px;
+    margin: 10px;
+}
+
+html {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1em;
+    line-height: 1.5em;
+}
+
+menu {
+    display: none;
+}
+
+article::after {
+    content: 'Esse artigo foi impresso através do site www.cursoemvideo.com';
+}
+
