--- a/Exercicios/ex026/mq04/estilos/mediaquery.css
+++ b/Exercicios/ex026/mq04/estilos/mediaquery.css
@@ -1,3 +1,28 @@
 @charset "utf-8";
 
 /*Todas as demais midias*/
+
+/* Typical Device Breakpoints
+-----------------------------
+Pequenas telas: até 600px.
+Celular: 600px até 768px.
+Tablet: 769px até 992px.
+DeskTop: 993px até 1200px.
+TV: Acima de 1200px.
+*/
+
+@media print {
+    
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /*Tablet*/
+    body {
+        background: url(../imagens/back-tablet.jpg);
+    }
+    img#celular {display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
