--- a/Exercicios/ex026/mq05/estilos/style.css
+++ b/Exercicios/ex026/mq05/estilos/style.css
@@ -28,8 +28,17 @@ header > h1 {
     padding: 10px;
 }
 
-menu {
+#menu {
+    background-color: var(--cor5);
     display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
